--- a/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
@@ -270,10 +270,10 @@
             </objects>
             <point key="canvasLocation" x="640" y="365"/>
         </scene>
-        <!--Workout Groups View Controller - Workout Routines-->
+        <!--Workout Routines View Controller - Workout Routines-->
         <scene sceneID="PzD-Bk-dfM">
             <objects>
-                <viewController id="VLG-Pr-IPZ" customClass="WorkoutGroupsViewController" sceneMemberID="viewController">
+                <viewController id="VLG-Pr-IPZ" customClass="WorkoutRoutinesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZjQ-Gn-Wra">
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -283,7 +283,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="WorkoutGroupCell" textLabel="8Rt-Tt-VAs" style="IBUITableViewCellStyleDefault" id="uLH-zV-e7Q">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="WorkoutRoutineCell" textLabel="8Rt-Tt-VAs" style="IBUITableViewCellStyleDefault" id="uLH-zV-e7Q">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -326,10 +326,10 @@
             </objects>
             <point key="canvasLocation" x="1052" y="365"/>
         </scene>
-        <!--Add Wrokout Group View Controller-->
+        <!--Add Wrokout Routine View Controller-->
         <scene sceneID="Vg5-iZ-OcF">
             <objects>
-                <viewController id="s0u-Vh-gty" customClass="AddWrokoutGroupViewController" sceneMemberID="viewController">
+                <viewController id="s0u-Vh-gty" customClass="AddWrokoutRoutineViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gEy-jt-d8J">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -385,7 +385,7 @@
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="WorkoutGroupWorkoutCell" textLabel="EKB-Lf-yOe" style="IBUITableViewCellStyleDefault" id="hcL-SE-Cx6">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="WorkoutRoutineWorkoutCell" textLabel="EKB-Lf-yOe" style="IBUITableViewCellStyleDefault" id="hcL-SE-Cx6">
                                         <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -414,7 +414,7 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="oCo-4C-fpi" id="AAa-Pd-o6D"/>
-                        <outlet property="txtGroupName" destination="EjH-pr-wUv" id="cPn-tT-jbK"/>
+                        <outlet property="txtRoutineName" destination="EjH-pr-wUv" id="qS1-Kz-ZNL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o0g-jJ-4ja" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -642,81 +642,6 @@
         <image name="log.png" width="23" height="25"/>
         <image name="workout.png" width="28" height="10"/>
     </resources>
-    <classes>
-        <class className="AddWorkoutLogViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddWorkoutLogViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addSelected:"/>
-                <relationship kind="action" name="cancelSelected:"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="AddWorkoutViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddWorkoutViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addCategorySelected:"/>
-                <relationship kind="action" name="addWorkoutSelected:"/>
-                <relationship kind="action" name="cancelSelected:"/>
-                <relationship kind="outlet" name="pickerView" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="txtWorkoutCategory" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="txtWorkoutName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="AddWrokoutGroupViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddWrokoutGroupViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addSelected:"/>
-                <relationship kind="action" name="cancelSelected:"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="txtGroupName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="BaseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BaseViewController.h"/>
-        </class>
-        <class className="WorkoutGroupsViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WorkoutGroupsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="WorkoutLogCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WorkoutLogCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bottomView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="lblReps" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lblWeight" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lblWorkoutName" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="WorkoutLogDetailViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WorkoutLogDetailViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="cancelSelected:"/>
-                <relationship kind="action" name="doneSelected:"/>
-                <relationship kind="action" name="repStepperDidChange:"/>
-                <relationship kind="action" name="textFieldDidChangeValue:"/>
-                <relationship kind="action" name="weightStepperDidChange:"/>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
-                <relationship kind="outlet" name="repStepper" candidateClass="UIStepper"/>
-                <relationship kind="outlet" name="txtRep" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="txtWeight" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="weightStepper" candidateClass="UIStepper"/>
-            </relationships>
-        </class>
-        <class className="WorkoutLogsViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WorkoutLogsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="WorkoutsViewController" superclassName="BaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WorkoutsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
