--- a/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Easy Workout/en.lproj/MainStoryboard_iPhone.storyboard
@@ -99,14 +99,14 @@
             <objects>
                 <viewController storyboardIdentifier="WorkoutLogDetailViewController" id="9MQ-Tf-T5i" customClass="WorkoutLogDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h4h-3x-PEo">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="0.0" y="20" width="300" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" id="wEJ-bn-pgi">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Name" id="of2-aI-395">
+                                    <navigationItem title="Log Entry" id="of2-aI-395">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="deV-KO-Boo">
                                             <connections>
                                                 <action selector="cancelSelected:" destination="9MQ-Tf-T5i" id="s6V-fL-BM8"/>
@@ -172,6 +172,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="repStepper" destination="Ota-4L-z8M" id="uzD-9E-BqZ"/>
                         <outlet property="txtRep" destination="ucV-zZ-JXV" id="2Mh-82-9lf"/>
@@ -691,7 +692,6 @@
                 <relationship kind="action" name="repStepperDidChange:"/>
                 <relationship kind="action" name="textFieldDidChangeValue:"/>
                 <relationship kind="action" name="weightStepperDidChange:"/>
-                <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="repStepper" candidateClass="UIStepper"/>
                 <relationship kind="outlet" name="txtRep" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="txtWeight" candidateClass="UITextField"/>
